[gd_scene load_steps=2 format=3 uid="uid://cfghc2k8wdpiu"]

[ext_resource type="Script" path="res://ui/lobby/quick_play_ui.gd" id="1_quickplay"]

[node name="QuickPlayUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_quickplay")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_right = 250.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quick Play"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ModeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/ModeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Mode:"

[node name="PvPButton" type="Button" parent="CenterContainer/VBoxContainer/ModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "PvP"

[node name="ZombiesButton" type="Button" parent="CenterContainer/VBoxContainer/ModeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
toggle_mode = true
text = "Zombies"

[node name="MapContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/MapContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Map:"

[node name="MapOption" type="OptionButton" parent="CenterContainer/VBoxContainer/MapContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="SizeContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/SizeContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Players:"

[node name="SizeOption" type="OptionButton" parent="CenterContainer/VBoxContainer/SizeContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="ActionButtons" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="CancelButton" type="Button" parent="CenterContainer/VBoxContainer/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer/ActionButtons"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Play"
